i18n/ja/docusaurus-plugin-content-docs/version-21/settings/web.md
---
id: web
title: Web ページ
---

**Web** ページのタブを使用して、4D に統合された Webサーバーの様々な設定 (セキュリティ、開始オプション、接続、Webサービス等) にアクセスできます。 **Web** ページのタブを使用して、4D に統合された Webサーバーの様々な設定 (セキュリティ、開始オプション、接続、Webサービス等) にアクセスできます。 4D Webサーバーの動作に関する詳細は [Web サーバー](../WebServer/webServer.md) を参照ください。 また、Webサービスに関する詳細は [Web サービスの公開と使用](https://doc.4d.com/4Dv20/4D/20.2/Publication-and-use-of-Web-Services.200-6750103.ja.html) を参照ください。 また、Webサービスに関する詳細は [Web サービスの公開と使用](https://doc.4d.com/4Dv20/4D/20.2/Publication-and-use-of-Web-Services.200-6750103.ja.html) を参照ください。

## 設定

### 公開情報

#### 開始時にWebサーバーを起動

4Dアプリケーションの起動時に Webサーバーを開始するか指定します。 このオプションは [4D Webサーバーの開始](../WebServer/webServerAdmin.md#4d-web-サーバーの開始) で説明しています。

#### HTTPを有効化

安全でない接続を Webサーバーが受け入れるかどうかを示します。 [HTTPを有効化](../WebServer/webServerConfig.md#httpを有効化) 参照。

#### HTTP ポート

HTTP接続を受け付ける IP (TCP) ポート番号。 HTTP接続を受け付ける IP (TCP) ポート番号。 [HTTP ポート](../WebServer/webServerConfig.md#http-ポート) 参照。

#### IPアドレス

4D Webサーバーが HTTPリクエストを受け付ける IPアドレスを指定できます (4Dローカルおよび 4D Server)。 [リクエストを受け付ける IPアドレス](../WebServer/webServerConfig.md#リクエストを受け付ける-ipアドレス) 参照

#### HTTPSを有効にする

安全な接続を Webサーバーが受け入れるかどうかを示します。 安全な接続を Webサーバーが受け入れるかどうかを示します。 [HTTPSを有効にする](../WebServer/webServerConfig.md#httpsを有効化にする) 参照。

#### HTTPS ポート

TLS (HTTPSプロトコル) を使用したセキュアな HTTP接続に対して Webサーバーが使用する TCP/IPポート番号を指定できます。 [HTTPS ポート](../WebServer/webServerConfig.md#https-ポート) 参照

### パス

#### デフォルトHTMLルート

Webサイトファイルのデフォルトの位置を指定し、それより上のファイルにはアクセス不能なディスク上の階層レベルを指定します。 [ルートフォルダー](../WebServer/webServerConfig.md#ルートフォルダー) 参照。

#### デフォルトホームページ

Webサーバー用のデフォルトホームページを指定します。 Webサーバー用のデフォルトホームページを指定します。 [デフォルトホームページ](../WebServer/webServerConfig.md#デフォルトホームページ) 参照。

## オプション (I)

### キャッシュ

#### 4D Webキャッシュを使用する

Webページキャッシュを有効化します。 [キャッシュ](../WebServer/webServerConfig.md#キャッシュ) 参照。

#### ページキャッシュサイズ

キャッシュサイズを指定します。 [キャッシュ](../WebServer/webServerConfig.md#キャッシュ) 参照。

#### キャッシュクリア

いつでもページやイメージをキャッシュからクリアできます (たとえば、スタティックページを更新し、キャッシュにそれをリロードさせたい場合)。
これをおこなうには、**キャッシュクリア** ボタンをクリックします。 キャッシュは即座にクリアされます。

> 特殊なURL [/4DCACHECLEAR](../WebServer/webServerAdmin.md#4dcacheclear) を使用することもできます。

### Webプロセス

このエリアでは、ユーザーセッションとそれに関連するプロセスを Webサーバーがどのように管理するかを設定します。

> **旧式セッション** オプションは、4D v18 R6 以前のバージョンで作成されたデータベース/プロジェクトにおいて互換性のためにのみ利用可能です。

#### スケーラブルセッション (マルチプロセスセッション)

このオプションを選択すると (推奨)、ユーザーセッションは **Session** オブジェクトを介して管理されます。 このオプションを選択すると (推奨)、ユーザーセッションは **Session** オブジェクトを介して管理されます。 [ユーザーセッション](../WebServer/sessions.md#enabling-web-sessions) のページを参照ください。

#### セッションなし

このオプションが選択されている場合、Webサーバーは [ユーザーセッション](../WebServer/sessions.md) 専用のサポートを提供しません。 Webクライアントからの連続したリクエストはどれも常に独立しており、サーバー上でコンテキストは維持されません。 Webクライアントからの連続したリクエストはどれも常に独立しており、サーバー上でコンテキストは維持されません。

このモードでは、以下の追加の Web サーバー設定を設定することができます:

- [最大同時Webプロセス](#最大同時webプロセス)
- [一時的なコンテキストを再利用する (リモートモード)](#一時的なコンテキストを再利用する)
- [プリエンプティブプロセスを使用](#プリエンプティブプロセスを使用)

#### 旧式セッション (シングルプロセスセッション)

*互換性に関する注記*: このオプションは 4D v18 R6 以前のバージョンで作成されたデータベース/プロジェクトでのみ利用可能です。

このオプションは 4D HTTP サーバーの旧式ユーザーセッションの管理を有効化します。 この機構は [Webセッション管理(旧式)](https://doc.4d.com/4Dv20/4D/20.6/Web-Sessions-Management-Legacy.300-7487177.ja.html) にて詳細に説明されています。 [旧式セッション (自動セッション管理)](../WebServer/webServerConfig.md#旧式セッション-自動セッション管理) 参照。

このオプションが選択されていると、[一時的なコンテキストを再利用する (リモートモード)](#一時的なコンテキストを再利用する) オプションも自動で選択され、ロックされます。

#### 最大同時Webプロセス

[スケーラブルセッションモード](../WebServer/sessions.md) の場合には利用できません。

Webプロセスの最大同時接続数の厳格な上限です。 Webプロセスの最大同時接続数の厳格な上限です。 [最大同時Webプロセス](../WebServer/webServerConfig.md#最大同時webプロセス) 参照。

#### 一時的なコンテキストを再利用する

[スケーラブルセッションモード](../WebServer/sessions.md) の場合には利用できません。

リモートモードで実行されている 4D Webサーバーの動作を最適化できます。 [一時的なコンテキストを再利用する (リモートモード)](../WebServer/webServerConfig.md#一時的なコンテキストを再利用する-リモートモード) 参照。

#### プリエンプティブプロセスを使用

[スケーラブルセッションモード](../WebServer/sessions.md) の場合には利用できません。

コンパイル済みアプリケーションにおいてプリエンプティブWebプロセスを有効化します。 **プリエンプティブプロセスを使用** が選択されているとき、Web関連のコード (4D グと Webデータベースメソッドを含む) は、コンパイル時にプリエンティブな実行が可能かどうかが評価されます。 詳細な情報については、[プリエンプティブWebプロセスの使用](../WebServer/preemptiveWeb.md) を参照ください。

> このオプションは スケーラブルセッション、RESTプロセス (コンパイル済みモード)、および Webサービスプロセス (サーバーあるいはクライアント) には適用されません。 [Web サーバーにおいてプリエンプティブモードを有効化する](../WebServer/webServerConfig.md#プリエンプティブプロセスを使用) を参照してください。

#### 非動作プロセスのタイムアウト

[スケーラブルセッションモード](../WebServer/sessions.md) の場合には利用できません。

サーバー上で活動していない Webプロセスを閉じるための最大タイムアウト時間を設定できます。 サーバー上で活動していない Webプロセスを閉じるための最大タイムアウト時間を設定できます。 [非アクティブセッションタイムアウト](../WebServer/webServerConfig.md#非アクティブセッションタイムアウト) 参照。

### Webパスワード

Webサーバーに対して適用する認証システムを設定します。 3つのオプションから選択できます:

- カスタムの認証 (デフォルト)
- BASIC プロトコルのパスワード
- DIGEST プロトコルのパスワード

**カスタムの認証** を使用することが推奨されています。 **カスタムの認証** を使用することが推奨されています。 [**認証**](../WebServer/authentication.md) の章を参照してください。

#### 一般Webユーザー

[廃止予定の設定](../WebServer/webServerConfig.md#廃止予定の設定) 参照。

## オプション (II)

### テキスト変換

#### 拡張文字をそのまま送信

[廃止予定の設定](../WebServer/webServerConfig.md#廃止予定の設定) 参照。

#### 文字コード

4D Webサーバーが使用する文字セットを定義します。 [文字コード](../WebServer/webServerConfig.md#文字コード) 参照。

### Keep-Alive接続を使用する

[廃止予定の設定](../WebServer/webServerConfig.md#keep-alive接続を使用する) 参照。

### CORS設定

#### CORSを有効化

クロスオリジンリソースシェアリング (CORS) サービスを有効化します。 CORSサービスで許可されたホストとメソッドの一覧。 [CORS設定](../WebServer/webServerConfig.md#cors設定) 参照。

#### ドメイン名/許可されたHTTPメソッド

CORSサービスで許可されたホストとメソッドの一覧。 [CORS設定](../WebServer/webServerConfig.md#cors設定) 参照。

## ログ (タイプ)

### ログフォーマット

4D Web サーバーが受け取るリクエストのログを開始/停止します。ログは、*logweb.txt* ファイルに記録され、そのフォーマットを指定することができます。 [ログの記録](../WebServer/webServerConfig.md#ログの記録) 参照。

> リクエストのログファイルの有効/無効は [WEB SET OPTION](../commands-legacy/web-set-option.md) コマンドを使用することでプログラミングでも切り替えられます。

ログフォーマットメニューでは、次のオプションを提供します。

- **ログファイルなし**: このオプションが選択されると、4D はリクエストのログファイルを作成しません。

- **CLF (Common Log Format)**: このオプションが選択されると、リクエストのログが CLFフォーマットで作成されます。 **CLF (Common Log Format)**: このオプションが選択されると、リクエストのログが CLFフォーマットで作成されます。 CLFフォーマットでは、それぞれのリクエストが行単位でファイル内に表示されます:\host rfc931 user [DD/MMM/YYYY:HH:MM:SS] "request" state length\ 各フィールドはスペースによって区切られ、各行は CR/LF シーケンス (character 13、character 10) で終わります。

  - host: クライアントの IPアドレス (例: 192.100.100.10)
  - rfc931: 4Dによって作成されない情報。 常に - (マイナス記号) です。
  - use: 認証されているユーザー名、あるいは、- (マイナス記号) 。 ユーザー名にスペースが含まれると、_ (下線) に置き換わります。
  - DD: 日、MMM: 月を表す3文字の略号 (Jan、Febなど)、YYYY: 年、HH: 時間、MM: 分、SS: 秒。

> 日付と時間はサーバーのローカルタイム。

- request: クライアントによって送られたリクエスト (例: GET /index.htm HTTP/1.0)
- state: サーバーの返答。
- length: 返されたデータ (HTTPヘッダー以外) のサイズまたは 0。

> **注:** パフォーマンス上の理由により、操作はメモリのバッファーに 1Kbのパケットで保存されてから、ディスクに書き込まれます。 5秒間リクエストが発生しなくても、操作はディスクに書き込まれます。
> state として取り得る値は以下の通り:<br/> 200: OK<br/> 204: No contents<br/> 302: Redirection<br/> 304: Not modified<br/> 400: Incorrect request<br/> 401: Authentication required<br/> 404: Not found<br/> 500: Internal error<br/> CLFフォーマットはカスタマイズされません。

- **DLF (Combined Log Format)**: このオプションが選択されると、リクエストログが DLFフォーマットで作成されます。 DLFフォーマットは CLFフォーマットと類似していて、まったく同じ構造を使用します。 さらに、各リクエストの最後に2つのHTTPフィールド、Referer と User-agent を追加します。 DLFフォーマットは CLFフォーマットと類似していて、まったく同じ構造を使用します。 さらに、各リクエストの最後に2つのHTTPフィールド、Referer と User-agent を追加します。

  - Referer: リクエストされたドキュメントを指しているページの URL を含みます。
  - User-agent: リクエストのオリジンにおけるクライアントのブラウザーまたはソフトウェアの名前とバージョンを含みます。

> DLFフォーマットはカスタマイズされません。

- **ELF (Extended Log Format)**: このオプションが選択されると、リクエストログが ELFフォーマットで作成されます。 ELFフォーマットは HTTPブラウザー界で広く普及しています。 そして、特別なニーズに応える洗練されたログを構築します。 この理由により、ELFフォーマットはカスタマイズされます。 記録するフィールドやそのフィールドをファイルへ挿入する順番を選択することが可能です。 ELFフォーマットは HTTPブラウザー界で広く普及しています。 そして、特別なニーズに応える洗練されたログを構築します。 この理由により、ELFフォーマットはカスタマイズされます。 記録するフィールドやそのフィールドをファイルへ挿入する順番を選択することが可能です。

- **WLF (WebStar Log Format)**: このオプションが選択されると、リクエストログが WLFフォーマットで作成されます。 WLFフォーマットは 4D WebSTAR サーバー用として特別に開発されました。 いくつかの追加フィールドを持つ以外、EFLフォーマットと似ています。 EFLフォーマットと同様、 カスタマイズされます。 WLFフォーマットは 4D WebSTAR サーバー用として特別に開発されました。 いくつかの追加フィールドを持つ以外、EFLフォーマットと似ています。 EFLフォーマットと同様、 カスタマイズされます。

**フィールドの設定**<br/>
ELF (Extended Log Format) または WLF (WebStar Log Format) を選択すると、選択されたフォーマットに対して利用可能なフィールドが表示されます。 ログに含む各フィールドを選択する必要があります。 ログに含む各フィールドを選択する必要があります。 ログに含む各フィールドを選択する必要があります。 ログに含む各フィールドを選択する必要があります。

**注**: 同じフィールドを 2度選択することはできません。

各フォーマットで利用可能なフィールド (アルファベット順) とその内容を以下のテーブルに示します:

| フィールド                                                  | ELF | WLF | 値                                                                                                                     |
| ------------------------------------------------------ | --- | --- | --------------------------------------------------------------------------------------------------------------------- |
| BYTES_RECEIVED                    |     | ○   | サーバーが受け取ったバイト数                                                                                                        |
| BYTES_SENT                        | ○   | ○   | サーバーがクライアントに送ったバイト数                                                                                                   |
| C_DNS                             | ○   | ○   | DNS の IPアドレス (ELF: C_IP フィールドと同一のフィールド)                       |
| C_IP                              | ○   | ○   | クライアントの IPアドレス (例: 192.100.100.10) |
| CONNECTION_ID                     |     | ○   | 接続ID番号                                                                                                                |
| CS(COOKIE)                          | ○   | ○   | HTTPリクエストに格納されている cookie に関する情報                                                                                       |
| CS(HOST)                            | ○   | ○   | HTTPリクエストの Hostフィールド                                                                                                  |
| CS(REFERER)                         | ○   | ○   | リクエストされたドキュメントを指すページの URL                                                                                             |
| CS(USER_AGENT) | ○   | ○   | クライアントのソフトウェアとオペレーティングシステムに関する情報                                                                                      |
| CS_SIP                            | ○   | ○   | サーバーの IPアドレス                                                                                                          |
| CS_URI                            | ○   | ○   | リクエストが作成された URI                                                                                                       |
| CS_URI_QUERY | ○   | ○   | リクエストのクエリ引数                                                                                                           |
| CS_URI_STEM  | ○   | ○   | クエリ引数のないリクエストのパート                                                                                                     |
| DATE                                                   | ○   | ○   | DD: 日、MMM: 月を表す3文字の略号 (Jan、Febなど)、YYYY: 年          |
| METHOD                                                 | ○   | ○   | サーバーへ送られたリクエスト用の HTTPメソッド                                                                                             |
| PATH_ARGS                         |     | ○   | CGI引数: "$" の後に続く文字列                                                                                   |
| STATUS                                                 | ○   | ○   | サーバーの返答                                                                                                               |
| TIME                                                   | ○   | ○   | HH: 時間、MM: 分、SS: 秒                                                    |
| TRANSFER_TIME                     | ○   | ○   | 返答を作成するためにサーバーが要求した時間                                                                                                 |
| USER                                                   | ○   | ○   | 認証されているユーザー名、あるいは、- (マイナス記号) 。                                                                     |
|                                                        |     |     | ユーザー名にスペースが含まれると、_ (下線) に置き換わります。                                             |
| URL                                                    |     | ○   | クライアントがリクエストした URL                                                                                                    |

> 日付と時間は GMTで表されます。

## ログ (バックアップ)

リクエストログの自動バックアップ設定を指定します。 最初に、頻度 (日、週などの単位)  またはファイルサイズの上限に対応するラジオボタンをクリックして選択します。 必要に応じて、バックアップする正確な時間を指定します。

- **バックアップしない**: 周期的なバックアップ機能が無効になっています。
- **X 時間ごと**: 1時間単位でバックアップをプログラムする際、このオプションを使用します。 1 から 24 の値を入力します。

  - **開始時刻**: 最初のバックアップ開始時間の設定に使用します。
- **X 日ごと**: 1日単位でバックアップをプログラムする際、このオプションを使用します。 バックアップを毎日実行するには、1を入力します。 このオプションをチェックすると、バックアップの開始時間を指定しなければなりません。
- **X 週ごと**: 1週間単位でバックアップをプログラムする際、このオプションを使用します。 たとえば、毎週バックアップをおこなうには 1 と設定します。 たとえば、毎週バックアップをおこなうには 1 と設定します。 このオプションをチェックすると、バックアップを開始する曜日と時間を指定しなければなりません。 複数の曜日を選択することもできます。
- **X 月ごと**: 1ヶ月単位でバックアップをプログラムする際、このオプションを使用します。 たとえば、毎月バックアップをおこなうには 1 と設定します。 このオプションをチェックすると、バックアップ開始月の日時を設定しなければなりません。
- **X MB** (サイズ指定): カレントのリクエストログのファイルサイズに基づいてバックアップをプログラムする際、このオプションを使用します。 ファイルが指定サイズに達すると、バックアップが自動的に起動します。 サイズ制限は 1、10、100 または 1000MB ごとに設定可能です。

> スケジュールされたバックアップの場合で、バックアップが開始する予定となっているときに Webサーバーが起動していないと、次回の起動において 4D はバックアップが失敗したと見なし、データベース設定で示されている適切な設定を適用します。

## Webサービス

このページのオプションを使用して 4Dプロジェクトの Webサービスを有効にし、(サーバーおよびクライアントの) 設定をすることができます。

また、Webサービスに関する詳細は [Web サービスの公開と使用](https://doc.4d.com/4Dv20/4D/20.2/Publication-and-use-of-Web-Services.200-6750103.ja.html) を参照ください。

### サーバー側設定

このエリアでは 4D を Webサービスサーバーとして使用する (つまり、Webサービスの形でプロジェクトメソッドを公開する) ための設定をおこないます。

- **Webサービスリクエストを許可する**: このオプションを使用して Webサービスクライアントからのリクエストを受け付けるかどうかを設定します。 **Webサービスリクエストを許可する**: このオプションを使用して Webサービスクライアントからのリクエストを受け付けるかどうかを設定します。 このオプションが選択されていない場合、4D は SOAPリクエストを拒否し、メソッドが*WSDLを公開* 属性を設定されていても WSDL を生成しません。 このオプションを選択すると、4D はメソッドプロパティに基づき WSDLファイルを生成します。 このオプションが選択されていない場合、4D は SOAPリクエストを拒否し、メソッドが<em x-id="4">WSDLを公開</em> 属性を設定されていても WSDL を生成しません。
- **Webサービス名:** このエリアでは Webサービスの "包括的な名称" を変更できます。 この名前は、SOAPサーバーレベルでサービスを識別するために使用されます。 デフォルトで 4D は "A_WebService" を使用します。
- **Webサービス名:** このエリアでは Webサービスの "包括的な名称" を変更できます。 この名前は、SOAPサーバーレベルでサービスを識別するために使用されます。 デフォルトで 4D は "A_WebService" を使用します。 インターネットに公開される各 Webサービスはユニークでなければなりません。 Webサービス名をユニークにするために XML名前空間が使用されます。 名前空間は任意の文字列で、XMLタグをユニークに識別するために使用されます。 典型的には、名前空間は会社の URL で始まります (http://mycompany.com/mynamespace)。 指定された文字列がユニークである限り、指定した URL に何か付け加える必要はありません。 デフォルトで 4D は以下の名前空間を使用します: http://www.4d.com/namespace/default。

> タグ名に関する XML標準に準拠するために、使用する文字には空白が含まれていてはなりません。 また数字から始まっていてはなりません。 非互換性を避けるために、アクセント文字や日本語などの拡張文字は使用しないことを推奨します。

### クライアント側設定

このエリアでは Webサービスクライアントとして 4D を使用する (つまり、ネットワーク上に公開されているサービスにサブスクライブする) ための設定をおこないます。

- **ウィザードメソッドプリフィクス**: このエリアでは、Webサービスウィザードを使用して 4D が自動生成するプロキシメソッドの接頭辞を設定します。 プロキシプロジェクトメソッドは 4Dアプリケーションと Webサービスサーバーとのリンクを形成します。 デフォルトで "proxy_" が使用されます。 プロキシプロジェクトメソッドは 4Dアプリケーションと Webサービスサーバーとのリンクを形成します。 デフォルトで "proxy_" が使用されます。

## Web機能

このページには、RESTサーバーなどの高度な Web機能を有効化および制御するためのオプションが含まれています。

### 公開

#### RESTサーバーとして公開

RESTサーバーを開始/停止します。 RESTサーバーを開始/停止します。 [RESTサーバー設定](../REST/configuration.md) 参照。

### アクセス権

:::info 非推奨

4D 20 R6 以降、**このセクションは非推奨** となっています。 現在のプロジェクト設定が古く、アップグレードが必要な場合は、このセクションに **ds.authentify() 関数を通しての REST認証を有効化** ボタン (後述参照) が表示されます。 プロジェクトがすでに [強制ログイン](../REST/authUsers.md#強制ログインモード) モードに対応している場合にはこのセクションは存在しないため、この段落は無視してください。

:::

4D プロジェクト内におけるRES アクセスの推奨される管理方法について知りたい場合には、[ユーザーとセッション](../REST/authUsers.md) の章を参照してください。

#### ds.authentify() 関数を通しての REST認証を有効化

**ds.authentify() 関数を通しての REST認証を有効化** ボタンをクリックすると、RESTユーザーアクセスに関してプロジェクトが自動でアップグレードされます。 この操作は元に戻せません。また、コードを修正する必要があるかもしれないことに注意してください (ボタンをクリックすると警告ダイアログボックスが表示されます)。 この操作は元に戻せません。また、コードを修正する必要があるかもしれないことに注意してください (ボタンをクリックすると警告ダイアログボックスが表示されます)。

:::note

このボタンは、4Dアプリケーション (シングルユーザー) で開かれているプロジェクトでのみ利用可能です。

:::

このボタンは次のアップグレードシーケンスをトリガーします:

- **読み込み/書き出し** メニューで設定されている REST API ユーザーグループが削除されます。
- `On REST Authentication` データベースメソッドが削除されます (システムのゴミ箱に移動されます)。
- プロジェクトの [Sourcesフォルダー](../Project/architecture.md#sources) に ["roles.jsonファイル"](../ORDA/privileges.md#rolesjson-ファイル) が存在しない場合、`forceLogin` 属性が `True` に設定された状態でデフォルトのファイルが作成されます。

このアップグレードをおこなった後は、プロジェクトを再起動することを忘れないでください。

次のステップは、コードを適切に修正することです。 次のステップは、コードを適切に修正することです。 [**進め方はこのブログ記事を参照ください**](https://blog.4d.com/ja/force-login-now-is-the-default-mode-for-all-rest-authentications)。

### Qodly Studio

#### Qodly Studio へのアクセスを有効化する

:::note

このオプションは、Qodly Studio ライセンスが有効な場合にのみ表示されます。

:::

このオプションにより、ユーザーはカレントプロジェクトの [Qodly Studio](developer.4d.com/qodly/) にアクセスできるようになります。 [アプリケーションレベル](../Admin/webAdmin.md) でグローバルアクセスが許可されている必要があることに注意してください。 [アプリケーションレベル](../Admin/webAdmin.md) でグローバルアクセスが許可されている必要があることに注意してください。
